--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,15 @@ services:
       - "8080:80"
     networks:
       - php_advanced
+
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    ports:
+      - 8081:80
+    environment:
+      - PMA_ARBITRARY=1
+    networks:
+          - php_advanced
+    links:
+          - mysql:db
